css/main.css
@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css');



*,body{

  font-family: 'Quicksand', sans-serif;
  margin: 0;
  padding: 0;
	
}

/* Nav-header start */
.navbar-light {
    background: transparent;
}

.navbar-light.scrolled {
    transition: 500ms ease;
    background: black;
}
.navbar-nav a {
    font-family: poppins;
    font-size: 20px;
    text-transform: capitalize;
}

.navbar-light .navbar-brand {
    color: #fff;
    font-size: 25px;
    text-transform: capitalize;
    padding-top: .6rem;
    letter-spacing: 2px;
}

.navbar-light .navbar-brand:hover {
    color: white;
}

.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
    color: #fff;
}

.navbar-light .navbar-nav .nav-link {
    color: #fff;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: rgb(38, 202, 231);
}

.navbar-nav {
    text-align: center;
    
}

.nav-item {
    padding: .6rem 1rem;
}

/* .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
    color: #fff !important;
} */

.w-100 {
    height: 100vh;
}


.image-div {
    position: relative;
    height: 100vh;
    min-height: 300px;
    background: no-repeat center scroll;
    -webkit-background-size: cover  ;
    background-size: cover;
}

.image-text {
    position: absolute;
	top: 50%;
    left: 35%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    color: #838181;
    margin: 0;
}

.image-text h2 {
    width: 80%;
    font-size: 30px;
    text-transform: uppercase;
    font-weight: bold;
    /* letter-spacing: 2px; */
}

.image-text p {
    font-size: 18px;
    line-height: 1.9;
    font-style: italic;
}

.txt-rotate {
    color: rgb(38, 202, 231);
    font-weight: bolder;
}

@media only screen and (max-width: 768px) {
    .navbar-nav.ml-auto {
        background: rgba(0, 0, 0);
    }
    .navbar-toggler {
        padding: 1px 5px;
        font-size: 18px;
        line-height: 0.3;
        background: #fff;
        margin: 0 60px 0 0;
    }

    .image-text {
        display: flex;
        flex-direction: column;
        top: 65%;
        left: 60%;
        width: 100%;
        text-align: center;
        /* margin: 0 !important; */
    }

    .image-text h2 {
        font-size: 25px;
    }

    .image-text p {
        width: 75%;
        justify-content: center;
        
    }
}

@media only screen and (max-width: 989px) {
    .navbar-nav.ml-auto {
        background: rgba(0, 0, 0);
    }
    .navbar-toggler {
        padding: 1px 5px;
        font-size: 18px;
        line-height: 0.3;
        background: #fff;
        margin: 0 60px 0 0;
    }

    .image-text {
        display: flex;
        flex-direction: column;
        top: 65%;
        left: 60%;
        width: 100%;
        text-align: center;
        /* margin: 0 !important; */
    }

    .image-text h2 {
        font-size: 25px;
    }

    .image-text p {
        width: 75%;
        justify-content: center;
        
    }
}

@media only screen and (max-width: 1197px) {
    .container {
        margin-left: 20px;
    }

    .nav-item {
        padding: .5rem;
    }
}
/* End of nav-header */



section {
	margin : 0 !important;
	width: 100%
}

/********* PRODUCTS *************/
#products{
	
	padding : 13px;
	text-align : center;


  color : white;
	background-image: url('https://cdn.shopify.com/s/files/1/0066/9050/4822/files/About-NU-3_1000x.jpg?v=1568688747'); /*linear-gradient( 121.5deg,  rgba(249,249,249,1) 66.3%, #bbb 94.1% );*/
  background-size : cover;



}
@media screen and (max-width : 768px){
	#products p.tagline{
	font-size : 40px;
	font-weight : bold;
    color : white;
}

#products span.tagUnder {
	font-size: 19px;
	padding: 10px;
    color : white;

}

}
@media screen and (min-width : 769px){
	#products p.tagline{
		font-weight : bold;
	font-size : 50px;
    color : white;
	
}

#products span.tagUnder {
	font-size: 26px;
	padding: 10px;
	font-weight : 400px;
    color : white;

}

}
.product-name{
	font-size: 50px;
	padding : 10px;
	margin-top : 20px;



}
.product-text{
	font-size: 20px
}
@media screen and (max-width : 768px){
	.single-product{
		
    background : #FFFFF0;
  color : black;
  padding : 10px;
	}
}
@media screen and (min-width: 769px){
	.single-product{
        
	padding: 10px;
	margin-left : 10%;
	margin-right : 10%;
	background : #FFFAFA;
  color : black;

}

}

#products span{
	padding : 10px;
}
.list-companies .card:hover{
	background-color: #000;
	color : #fff;
	cursor : pointer;
	margin-right: 0;

	}
.list-companies{
	font-size: 50px
}

.ctext{
	position : relative;
	font-size : 40px;
	
	
}
.ctext:after{
	content: "";
	position : absolute;
	border-top : 5px solid;
	background-color: #f3f3f3;
	height : 0px;
	
	bottom : -10px;
	left : 45%;
	width : 10%;
	
}
/*************** SCROLL ANIMATE ******************/
.scrollAnimate
{
    opacity:0;
}
/**************** COMPANY OVERLAY CSS ********************/
/* The Overlay (background) */
.overlay {
  /* Height & width depends on how you want to reveal the overlay*/   
  height: 100%;
  width: 0;
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  background-color: rgb(0,0,0); /* Black fallback color */
  background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
  overflow-x: hidden; /* Disable horizontal scroll */
  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
}

/* Position the content inside the overlay */
.overlay-content {
  position: relative;
  
  width: 100%; /* 100% width */
  margin-top : 40px;
  color : white;
}

/* The navigation links inside the overlay */
.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 36px;
  color: #818181;
  display: block; /* Display block instead of inline */
  transition: 0.3s; /* Transition effects on hover (color) */
}

/* When you mouse over the navigation links, change their color */
.overlay a:hover, .overlay a:focus {
  color: #f1f1f1;
}

/* Position the close button (top right corner) */
.overlay .closebtn {
  
  top: 20px;
  right: 45px;
  font-size: 60px;
}

/* For slides */
.rslides {
    position: relative;
    list-style: none;
    overflow: hidden;
    width: 100%;
    padding: 0;
    margin: 0;
    }
  
  .rslides li {
    -webkit-backface-visibility: hidden;
    position: absolute;
    display: none;
    width: 100%;
    left: 0;
    top: 0;
    }
  
  .rslides li:first-child {
    position: relative;
    display: block;
    float: left;
    }
  
  .rslides img {
    display: block;
    height: auto;
    float: left;
    width: 100%;
    border: 0;
    }

/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
@media screen and (max-height: 450px) {
  .overlay a {font-size: 200%}
  .overlay .closebtn {
    font-size: 100px;
    top: 15px;
    right: 35px;
  }

}

.blinking{
    animation:blinkingText 1.2s infinite;
}
@keyframes blinkingText{
    0%{     color: red;    }
    49%{    color: red; }
    60%{    color: #000; }
    99%{    color:#000;  }
    100%{   color: red;    }
}
#company_name,#company_description{
    color : white;
}
.company-intro{
	background-color: #1d1d1f;
	padding : 20px;
	color : white;
	text-align: center;
	
}
.company-intro p{
	font-size: 60px !important;

}
.companies p{
    font-size : 20px;
    text-align: center;
}


/* footer */

#secondColumn{
    font-size: 14px;
}
.footer-widget-nav {
    position: relative;
    z-index: 1; }
#footer h1, h3, h4,h5, h6 {
  color: #303030;
  line-height: 1.3;
  font-weight: 700; }
#footer p {
    color: #707070;
    font-size: 13px;
    line-height: 1.7;
    font-weight: 400; }
#image{
    font-weight: 500;
    color: white;
    position: relative;}
.link a{
    text-decoration: none;}
.footer-widget-nav ul {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap; }
.footer-widget-nav ul li {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
    list-style: none;
    width: 50%; }
.footer-widget-nav ul li a {
    text-decoration: none;
    color: #b7b7b7;
    display: block;
    margin-bottom: 15px;
    font-weight: 400; }
.footer-widget-nav ul li a:focus, .footer-widget-nav ul li a:hover {
    color: #ffffff; }
.contact-info {
    position: relative;
     z-index: 1; }
.contact-info p {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 20px;
    line-height: 1.3; }
.contact-info p i {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 30px;
    flex: 0 0 30px;
    max-width: 30px;
    width: 30px;
    color: grey; }
.contact-info p:last-child {
    margin-bottom: 0; }
.footer-area {
    position: relative;
    z-index: 1;
    background-color: #ffffff; }
.footer-area .footer-widget {
    position: relative;
    z-index: 1; }
.footer-area .footer-widget .widget-title {
    font-size: 18px;
    font-weight: 700;
    margin-bottom: 30px;
    color: #ffffff; }
.footer-area .footer-widget p {
    color: #ffffff;
    margin-bottom: 15px; }    
.footer-social-info {
    position: relative;
    z-index: 1; }
.footer-social-info a {
    text-decoration: none;
    display: block;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin-bottom: 30px; }
.footer-social-info a:last-child {
    margin-bottom: 0; }
    .footer-social-info a i {
    -webkit-transition-duration: 500ms;
    -o-transition-duration: 500ms;
    transition-duration: 500ms;
    width: 40px;
    height: 40px;
    border-radius: 50%;
    text-align: center;
    color: #ffffff;
    border: 1px solid grey;
    line-height: 40px; }
.footer-social-info a span {
    color: #b7b7b7;
    font-size: 14px;
    display: inline-block;
    margin-left: 15px;
    font-weight: 400; }
.footer-social-info a:focus i, .footer-social-info a:hover i {
    background-color: grey; }
.footer-social-info a:focus span, .footer-social-info a:hover span {
    color: #ffffff; }          


.footer-item {
    padding-top: 20px;
    padding-bottom: 40px;
}

#ul {
    padding-left: 0; 
}

.social:not(:last-child) {
    margin-bottom: 15px!important;
}


/**************** WHAT WE DO CSS ********************/

.what-we-do {
    padding: 60px 0;
}

.what-we-do .Mytitle {
    text-align: center;
    color: #007b5e;
    margin-bottom: 50px;
    text-transform: uppercase;
}
#tabs{
	background: #007b5e;
    color: #eee;
}
#tabs h6.section-title{
    color: #eee;
}

#tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
    color: #f3f3f3;
    background-color: transparent;
    border-color: transparent transparent #f3f3f3;
    border-bottom: 4px solid !important;
    font-size: 20px;
    font-weight: bold;
}
#tabs .nav-tabs .nav-link {
    border: 1px solid transparent;
    border-top-left-radius: .25rem;
    border-top-right-radius: .25rem;
    color: #eee;
    font-size: 20px;
}
/**************** END OF WHAT WE DO ********************/

